--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mysql": "^2.18.1"
-  }
+   },
+  "engines": {
+  "node": "12.18.3",
+  "npm": "6.14.6"
+   }
 }
